<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DialogListRoot">

    <TextView
        style="@style/DialogListTitle"
        android:text="@string/epd_mode_dialog_title"
        />

    <RelativeLayout
        android:id="@+id/item1"
        style="@style/DialogListSelectableItem">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <TextView
                style="@style/DialogListItemText"
                android:text="@string/epd_mode_minimize_afterimage"
                android:textStyle="bold" />

            <TextView
                style="@style/DialogListDescription"
                android:text="@string/epd_mode_minimize_afterimage_description"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/check1"
            style="@style/DialogListCheckIcon" />
    </RelativeLayout>

    <View style="@style/DialogListDivider" />

    <RelativeLayout
        android:id="@+id/item3"
        style="@style/DialogListSelectableItem">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <TextView
                style="@style/DialogListItemText"
                android:text="@string/epd_mode_normal"
                android:textStyle="bold" />

            <TextView
                style="@style/DialogListDescription"
                android:text="@string/epd_mode_normal_description"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/check3"
            style="@style/DialogListCheckIcon" />
    </RelativeLayout>

</LinearLayout>
