<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="32dp"
    android:paddingTop="36dp"
    android:paddingEnd="32dp"
    android:paddingBottom="36dp">

    <TextView
        android:id="@+id/lsposedGuideMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/lsposed_ready_message"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/openLsposedManagerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_lsposed_manager"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/laterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/later"
        android:textColor="@android:color/black" />
</LinearLayout>
